# phd

./: .dropbox  .gitignore  306182904_Progressplan_v1.xlsm  306182904_Progressplan_v1.xlsx  ASC_2016_abstract.txt  Abramowitz1972.bib  Acknowledgements.tex  Advanced_Bayesian_Inference_assignment.tex  An_Introduction_to_Statistical_Learning_with_Applications_in_R.bib  Appendix.tex  Bartlett1957.bib  Bayarri2007.bib  Berger1998.bib  Bove2013.bib  CCHS data summary.tex  Chapter_0_preliminary.bib  Chapter_0_preliminary.tex  Chapter_1_preliminary.tex  Chapter_1_zero_inflated_models (Mark Greenaway's conflicted copy 2017-06-13).tex  Chapter_1_zero_inflated_models.bbl  Chapter_1_zero_inflated_models.bcf  Chapter_1_zero_inflated_models.bib  Chapter_1_zero_inflated_models.blg  Chapter_1_zero_inflated_models.run.xml  Chapter_1_zero_inflated_models.tex  Chapter_1_zero_inflated_models_formula_sheet.tex  Chapter_1_zero_inflated_models_indented.tex  Chapter_1_zero_inflated_models_john_edits.bbl  Chapter_1_zero_inflated_models_john_edits.blg  Chapter_1_zero_inflated_models_john_edits.tex  Chapter_2_normal_linear_models_formula_sheet.tex  Chapter_2_zero_inflated_models.tex  Chapter_2_zero_inflated_models_formula_sheet.tex  Chapter_3_Collapsed_Variational_Approximation.tex  Chapter_3_collapsed_variational_bayes (Mark Greenaway's conflicted copy 2016-10-21).tex  Chapter_3_collapsed_variational_bayes.tex  Chapter_3_collapsed_variational_bayes_formula_sheet.tex  Chapter_3_collapsed_variational_bayes_formula_sheet_indented.tex  Chapter_3_collapsed_variational_bayes_indented.tex  Chapter_3_g_prior_posterior.tex  (+231 more)
code/:  (Mark Greenaway's conflicted copy 2017-06-19).Rhistory  CMakeCache.txt  CMakeLists.txt  CalculateB.R  (+212 more)
(+279 files in other folders)
